--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -13,7 +13,7 @@
 
 @techreport{appelgrenKartleggingAvKortdistansespredning2017,
   title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Rogaland}} Og {{Hordaland}}},
-  author = {Appelgren, Leif and Torvik, Solbj\o rg Engen},
+  author = {Appelgren, Leif and Torvik, Solbj{\o}rg Engen},
   year = {2017},
   institution = {{Ecofact}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Appelgren and Torvik - 2017 - Kartlegging av kortdistansespredning av fremmede b.pdf},
@@ -101,7 +101,7 @@
 
 @phdthesis{berstadEndringarEitVestnorsk2014,
   title = {Endringar i Eit Vestnorsk Kystlandskap Som F\o lgje Av Planting Og Naturleg Forynging Av Sitkagran ({{Picea}} Sitchensis): {{Ein}} Landskaps\o kologisk Og Metodisk Studie},
-  author = {Berstad, \AA se-Birgitte and Auestad, Inger and Rydgren, Knut},
+  author = {Berstad, {\AA}se-Birgitte and Auestad, Inger and Rydgren, Knut},
   year = {2014},
   volume = {Master in},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Berstad et al_2014_Endringar i eit vestnorsk kystlandskap som følgje av planting og naturleg.pdf},
@@ -358,7 +358,7 @@
 @article{engelmarkEcologicalEffectsManagement2001,
   title = {Ecological Effects and Management Aspects of an Exotic Tree Species: The Case of Lodgepole Pine in {{Sweden}}},
   shorttitle = {Ecological Effects and Management Aspects of an Exotic Tree Species},
-  author = {Engelmark, Ola and Sj{\"o}berg, Kjell and Andersson, Bengt and Rosvall, Ola and \AA gren, G{\"o}ran I. and Baker, William L. and Barklund, Pia and Bj{\"o}rkman, Christer and Despain, Don G. and Elfving, Bj{\"o}rn and Ennos, Richard A. and Karlman, Margareta and Knecht, Magnus F. and Knight, Dennis H. and Ledgard, Nick J. and Lindel{\"o}w, \AA ke and Nilsson, Christer and Peterken, George F. and S{\"o}rlin, Sverker and Sykes, Martin T.},
+  author = {Engelmark, Ola and Sj{\"o}berg, Kjell and Andersson, Bengt and Rosvall, Ola and {\AA}gren, G{\"o}ran I. and Baker, William L. and Barklund, Pia and Bj{\"o}rkman, Christer and Despain, Don G. and Elfving, Bj{\"o}rn and Ennos, Richard A. and Karlman, Margareta and Knecht, Magnus F. and Knight, Dennis H. and Ledgard, Nick J. and Lindel{\"o}w, {\AA}ke and Nilsson, Christer and Peterken, George F. and S{\"o}rlin, Sverker and Sykes, Martin T.},
   year = {2001},
   month = feb,
   volume = {141},
@@ -463,14 +463,17 @@
 }
 
 @article{haakenstadNORA10EIRevisedRegional,
+  ids = {haakenstadNORA10EIRevisedRegional},
   title = {{{NORA10EI}}: {{A}} Revised Regional Atmosphere-Wave Hindcast for the {{North Sea}}, the {{Norwegian Sea}} and the {{Barents Sea}}},
   shorttitle = {{{NORA10EI}}},
-  author = {Haakenstad, Hilde and Breivik, \O yvind and Reistad, Magnar and Aarnes, Ole J.},
+  author = {Haakenstad, Hilde and Breivik, {\O}yvind and Reistad, Magnar and Aarnes, Ole J.},
   volume = {n/a},
   issn = {1097-0088},
   doi = {10.1002/joc.6458},
   copyright = {\textcopyright{} 2019 The Authors. International Journal of Climatology published by John Wiley \& Sons Ltd on behalf of the Royal Meteorological Society.},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Haakenstad et al__NORA10EI.pdf},
   journal = {International Journal of Climatology},
+  keywords = {climate,wind},
   language = {en},
   number = {n/a}
 }
@@ -537,7 +540,7 @@
   doi = {10.1007/s10530-020-02262-0},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Jacobson_Hannerz_2020_Natural regeneration of lodgepole pine in boreal Sweden.pdf},
   journal = {Biological Invasions},
-  keywords = {conifer,invasibility,invasion,recruitment},
+  keywords = {conifer,invasibility,invasion,plantation,recruitment},
   language = {en}
 }
 
@@ -574,7 +577,7 @@
 @article{kaliniewiczPhysicalPropertiesSeeds2018,
   ids = {kaliniewiczPhysicalPropertiesSeeds2018},
   title = {Physical {{Properties}} of {{Seeds}} of {{Eleven Spruce Species}}},
-  author = {Kaliniewicz, Zdzis\l aw and {\.Z}uk, Zbigniew and Kusi{\'n}ska, El{\.z}bieta},
+  author = {Kaliniewicz, Zdzis{\l}aw and {\.Z}uk, Zbigniew and Kusi{\'n}ska, El{\.z}bieta},
   year = {2018},
   month = oct,
   volume = {9},
@@ -586,6 +589,21 @@
   keywords = {forest},
   language = {en},
   number = {10}
+}
+
+@article{kargerClimatologiesHighResolution2017,
+  title = {Climatologies at High Resolution for the Earth's Land Surface Areas},
+  author = {Karger, D N and Conrad, O and B{\"o}hner, J and Kawohl, T and Kreft, H and {Soria-Auza}, R W and Zimmermann, N E and Linder, H P and Kessler, M},
+  year = {2017},
+  edition = {2017/09/06},
+  volume = {4},
+  pages = {170122},
+  doi = {10.1038/sdata.2017.122},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Karger et al_2017_Climatologies at high resolution for the earth's land surface areas.pdf},
+  isbn = {2052-4463 (Electronic) 2052-4463 (Linking)},
+  journal = {Scientific Data},
+  keywords = {SDM},
+  pmid = {28872642}
 }
 
 @article{katulEffectsGentleTopographic2012,
@@ -720,7 +738,7 @@
 
 @techreport{nordbakkenVrifuruPinusContorta2012,
   title = {{Vrifuru Pinus contorta}},
-  author = {Nordbakken, J\o rn-Frode},
+  author = {Nordbakken, J{\o}rn-Frode},
   year = {2012},
   institution = {{Artsdatabanken}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\FaktaArk_nr_226_Vrifuru__p_Pinuscontorta__p_.pdf},
@@ -761,7 +779,7 @@
 
 @techreport{orkaUseRemoteSensing2016,
   title = {Use of Remote Sensing for Mapping of Non-Native Conifer Species},
-  author = {\O rka, Hans Ole and Hauglin, Marius},
+  author = {{\O}rka, Hans Ole and Hauglin, Marius},
   year = {2016},
   pages = {1--76},
   address = {{\AA s, Norway}},
@@ -773,7 +791,7 @@
 
 @article{oyenBiomassPotentialSelected2017,
   title = {The {{Biomass Potential}} of {{Some Selected Native}} and {{Non}}-{{Native Species}} for {{Afforestation}} - {{A Case Study}} from {{Western Norway}}},
-  author = {\O yen, Bernt-H\aa vard and Nygaard, Per},
+  author = {{\O}yen, Bernt-H{\aa}vard and Nygaard, Per},
   year = {2017},
   volume = {1},
   doi = {10.15406/freij.2017.01.00015},
@@ -785,7 +803,7 @@
 
 @article{prestoSembrafuruPinusCembra2013,
   title = {Sembrafuru {{Pinus}} Cembra Invaderer Byn\ae rt Kulturlandskap. {{Eksempel}} Fra {{Ladehalv\o ya}}, {{Trondheim}}},
-  author = {Prest\o, Tommy and Hagen, Dagmar and Vange, Vibekke},
+  author = {Prest{\o}, Tommy and Hagen, Dagmar and Vange, Vibekke},
   year = {2013},
   volume = {71},
   pages = {16--26},
@@ -796,7 +814,7 @@
 
 @article{reistadHighresolutionHindcastWind2011,
   title = {A High-Resolution Hindcast of Wind and Waves for the {{North Sea}}, the {{Norwegian Sea}}, and the {{Barents Sea}}},
-  author = {Reistad, Magnar and Breivik, \O yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
+  author = {Reistad, Magnar and Breivik, {\O}yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
   year = {2011},
   volume = {116},
   pages = {C05019},
@@ -910,7 +928,7 @@
 
 @techreport{sandvenKartleggingAvKortdistansespredning2019,
   title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r i {{Hordaland}}},
-  author = {Sandven, J and Aamodt, O W and S\o rhuus, \O},
+  author = {Sandven, J and Aamodt, O W and S{\o}rhuus, {\O}},
   year = {2019},
   institution = {{NORSKOG}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandven et al. - 2019 - Kartlegging av kortdistansespredning av fremmede b.pdf},
@@ -1081,6 +1099,23 @@
   keywords = {dispersal},
   language = {en},
   number = {7}
+}
+
+@article{westreichTableFallacyPresenting2013,
+  title = {The {{Table}} 2 {{Fallacy}}: {{Presenting}} and {{Interpreting Confounder}} and {{Modifier Coefficients}}},
+  shorttitle = {The {{Table}} 2 {{Fallacy}}},
+  author = {Westreich, Daniel and Greenland, Sander},
+  year = {2013},
+  month = feb,
+  volume = {177},
+  pages = {292--298},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kws412},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Westreich_Greenland_2013_The Table 2 Fallacy.pdf},
+  journal = {American Journal of Epidemiology},
+  keywords = {causal inference,statistics},
+  language = {en},
+  number = {4}
 }
 
 @article{whittakerGradientAnalysisVegetation1967,
