--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -139,6 +139,17 @@
   number = {4}
 }
 
+@article{brooksGlmmTMBBalancesSpeed2017,
+  title = {{{glmmTMB}} Balances Speed and Flexibility among Packages for Zero-Inflated Generalized Linear Mixed Modeling},
+  author = {Brooks, Mollie E. and Kristensen, Kasper and {van Benthem}, Koen J. and Magnusson, Arni and Berg, Casper W. and Nielsen, Anders and Skaug, Hans J. and Maechler, Martin and Bolker, Benjamin M.},
+  year = {2017},
+  volume = {9},
+  pages = {378--400},
+  journal = {The R Journal},
+  keywords = {R package,statistics},
+  number = {2}
+}
+
 @techreport{brynVeilederKartleggingAv2015,
   title = {Veileder for Kartlegging Av Terrestrisk Naturvariasjon Etter {{NiN}} 2.0. Veileder Versjon 2.0.0.},
   author = {Bryn, Anders and Halvorsen, Rune},
@@ -812,6 +823,15 @@
   keywords = {management}
 }
 
+@misc{rcoreteamLanguageEnvironmentStatistical2020,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  year = {2020},
+  address = {{Vienna, Austria}},
+  howpublished = {R Foundation for Statistical Computing},
+  keywords = {R package}
+}
+
 @article{reistadHighresolutionHindcastWind2011,
   title = {A High-Resolution Hindcast of Wind and Waves for the {{North Sea}}, the {{Norwegian Sea}}, and the {{Barents Sea}}},
   author = {Reistad, Magnar and Breivik, {\O}yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
@@ -1158,6 +1178,19 @@
   journal = {Forest Science},
   language = {en},
   number = {6}
+}
+
+@incollection{zuurZeroTruncatedZeroInflatedModels2009,
+  title = {Zero-{{Truncated}} and {{Zero}}-{{Inflated Models}} for {{Count Data}}},
+  booktitle = {Mixed {{Effects Models}} and {{Extensions}} in {{Ecology}} with {{R}}},
+  author = {Zuur, Alain F and Ieno, Elena N and Walker, Neil J and Saveliev, Anatoly A and Smith, Graham M},
+  year = {2009},
+  pages = {261--294},
+  publisher = {{Springer Science+Business Media}},
+  address = {{NewYork, USA}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Zuur et al_2009_Mixed effects models and extensions in ecology with R.pdf},
+  isbn = {978-0-387-87457-9},
+  series = {Statistics for {{Biology}} and {{Health}}}
 }
 
 
